--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Full Name</th>
-                <th>Favourite Artist</th>
-                <th>State of Origin</th>
-                <th>Number of Siblings</th>
-                <th>Gender</th>
+                <th>Ngerem Maryjane</td>
+                <th>Ric Hassani</td>
+                <th>Imo</td>
+                <th>7</td>
+                <a class="btn btn__Female">Female</a></td>
             </tr>
         </thead>
         <tbody>
