--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
 
 <body>
     <table class="table">
-        <thead>
             <tr>
-                <th>Ngerem Maryjane</td>
-                <th>Ric Hassani</td>
-                <th>Imo</td>
-                <th>7</td>
+                <td>Ngerem Maryjane</td>
+                <td>Ric Hassani</td>
+                <td>Imo</td>
+                <td>7</td>
                 <a class="btn btn__Female">Female</a></td>
             </tr>
-        </thead>
         <tbody>
             <!--           first person -->
             <tr>
