--- a/index.html
+++ b/index.html
@@ -9,13 +9,7 @@
 
 <body>
     <table class="table">
-            <tr>
-                <td>Ngerem Maryjane</td>
-                <td>Ric Hassani</td>
-                <td>Imo</td>
-                <td>7</td>
-                <a class="btn btn__Female">Female</a></td>
-            </tr>
+            
         <tbody>
             <!--           first person -->
             <tr>
@@ -111,6 +105,13 @@
                 <td>Oyo State</td>
                 <td>1</td>
                 <td><a class="btn btn__male">Male</a></td>
+            </tr>
+    <tr>
+                <td>Ngerem Maryjane</td>
+                <td>Ric Hassani</td>
+                <td>Imo</td>
+                <td>7</td>
+                <td><a class="btn btn__Female">Female</a></td>
             </tr>
 
     </table>
